# Siput

./: .gitignore  Cargo.toml  INTERACTIVE_CLI_IMPLEMENTATION.md  README.md  build.rs  check_final.txt  check_output.txt  check_output2.txt  config.example.toml  nunay471  setup.sh  test_wallet01
.cargo/: config.toml
docs/: ECOSYSTEM_GUIDE.md  SDK_GUIDE.md
sdk/: README.md  package.json
sdk/android/: README.md  local.properties  settings.gradle
sdk/android/app/: build.gradle
sdk/android/app/src/main/java/com/siput/sdk/: SiputClient.java  SiputWallet.java
sdk/examples/javascript/event-listening/: index.js
sdk/examples/javascript/transaction-builder/: index.js
sdk/examples/javascript/wallet-connect/: index.js
sdk/examples/rust/contract-interaction/: Cargo.toml
sdk/examples/rust/contract-interaction/src/: main.rs
sdk/examples/rust/simple-wallet/: Cargo.toml
sdk/examples/rust/simple-wallet/src/: main.rs
sdk/go/: README.md  go.mod
sdk/go/client/: client.go
sdk/go/wallet/: wallet.go
sdk/javascript/: README.md  package.json  siput-sdk.js
sdk/javascript/provider/: events.js  provider.js  wallet_bridge.js
sdk/python/: README.md  pyproject.toml
sdk/python/siput_sdk/: __init__.py  client.py  wallet.py
sdk/python/siput_sdk_python.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
sdk/python/tests/: test_client.py
sdk/rust/: Cargo.toml  README.md
sdk/rust/src/: client.rs  contract.rs  crypto.rs  errors.rs  events.rs  lib.rs  sdk.rs  transaction.rs  wallet.rs
sdk/rust/src/mobile/: mobile_client.rs  mobile_wallet.rs  mod.rs
siput/: README.md
src/: abstraction.rs  config.rs  errors.rs  lib.rs  main.rs
src/abstraction/service/: blockchain_service.rs  contract_service.rs  mod.rs  node_service.rs
src/block/: block_producer.rs
src/cli/: cli.rs  cli_interface.rs  cli_interface.rs.backup  interactive.rs  mod.rs
src/consensus/: blue_set.rs  daa.rs  dag_traversal.rs  engine.rs  error.rs  fee_market.rs  ghostdag.rs  mining.rs  mod.rs
src/contracts/: contract_registry.rs  contract_storage.rs
src/core/: block.rs  mod.rs  transaction.rs
src/crypto/: mod.rs
src/dag/: blockdag.rs  dag_index.rs  mod.rs
src/events/: README.md  event_bus.rs  event_listener.rs  event_types.rs  global_emitter.rs  global_listener.rs  mod.rs  tests.rs
src/execution/: mod.rs  parallel_executor.rs  transaction_executor.rs
src/finality/: finality_engine.rs
src/mempool/: mod.rs  tx_dag_mempool.rs
src/network/: discovery.rs  gossip.rs  interface.rs  message.rs  mod.rs  p2p_network.rs  p2p_node.rs  peer_manager.rs  state_sync.rs  sync_manager.rs
src/node/: mod.rs  node_runtime.rs
src/node/services/: consensus_service.rs  execution_service.rs  mod.rs  network_service.rs  service_manager.rs
src/observability/: logging.rs  metrics.rs  mod.rs  tracing.rs
src/pipeline/: README.md  execution_stage.rs  finality_stage.rs  mempool_stage.rs  mod.rs  state_update_stage.rs  validation_stage.rs
src/plugins/: README.md  manager.rs  mod.rs  trait_def.rs
src/plugins/examples/: custom_tx.rs  defi.rs  event_plugins.rs  mod.rs  nft.rs
src/rpc/: README.md  interfaces.rs  mod.rs  server.rs  services.rs  versioning.rs  ws_server.rs
src/rpc/handlers/: blockchain.rs  contracts.rs  mod.rs  node.rs
src/security/: batch_verification.rs  dos_protection.rs  fuzz_testing.rs  mod.rs  pre_validation.rs
src/state/: mod.rs  state_manager.rs  state_tree.rs
src/storage/: block_store.rs  chain_storage.rs  engine.rs  mod.rs  pruning.rs
src/utils/: calculations.rs  getters.rs  mod.rs  validator.rs
src/vm/: README.md  contract_executor.rs  custom_vm.rs  engine.rs  host_functions.rs  mod.rs  wasm_runtime.rs  wasm_vm.rs
src/wallet/: wallet.rs
test_observability/: Cargo.toml
test_storage_wasm_runtime/: IDENTITY
tools/devnet/: README.md  devnet.sh
