[workspace]
members = [
    "sdk/rust", "test_observability",
]

[package]
name = "siput"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
sha3 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
secp256k1 = { version = "0.28", features = ["recovery", "rand", "serde", "global-context"] }
rand = "0.8"
tokio = { version = "1.36", features = ["full"] }
quinn = "0.10"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
sysinfo = { version = "0.35", features = ["system", "multithread", "network"] }
chrono = "0.4"
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
parking_lot = "0.12"
bincode = "1.3"
libp2p = { version = "0.53", features = ["tcp", "dns", "tokio", "websocket", "noise", "yamux", "floodsub", "kad", "identify", "ping", "mdns", "macros"] }
futures = "0.3"
axum = { version = "0.7", features = ["macros", "ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
rayon = "1"
toml = "0.8"
uuid = { version = "1.0", features = ["v4"] }

# UI dependencies for interactive dashboard
crossterm = "0.28"
ratatui = "0.20"

# smart contract dependencies
wasmtime = "42"
rocksdb = { version = "0.20", features = ["snappy", "lz4", "zstd"], default-features = false }

# Observability dependencies
opentelemetry = "0.21"
opentelemetry-otlp = { version = "0.14", features = ["grpc-tonic"] }
opentelemetry_sdk = { version = "0.21", features = ["rt-tokio"] }
tracing-opentelemetry = "0.22"
prometheus = "0.13"
lazy_static = "1.4"
once_cell = "1.17"

# SDK dependency
# siput-sdk path dependency is disabled to avoid cyclic dependency.\n# Use siput-sdk as an external crate from SDK workspace or Cargo feature as needed.

[dev-dependencies]
wat = "1.0"
tempfile = "3.6"

[[bin]]
name = "siput"
path = "src/main.rs"

[lib]
name = "siput_core"
path = "src/lib.rs"
